--- a/VikingChess/VikingChess.vcxproj
+++ b/VikingChess/VikingChess.vcxproj
@@ -128,7 +128,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="VikingChess.cpp" />
+	<ClCompile Include="utility.cpp" />
   </ItemGroup>
+   <ItemGroup>
+	<ClInclude Include="constants.h" />
+	<ClInclude Include="utility.h" />
+   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
