add board.cpp and .h

--- a/VikingChess/VikingChess.vcxproj
+++ b/VikingChess/VikingChess.vcxproj
@@ -129,10 +129,12 @@
   <ItemGroup>
     <ClCompile Include="VikingChess.cpp" />
 	<ClCompile Include="utility.cpp" />
+	<ClCompile Include="board.cpp" />
   </ItemGroup>
    <ItemGroup>
 	<ClInclude Include="constants.h" />
 	<ClInclude Include="utility.h" />
+	<ClCompile Include="board.h" />   
    </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
