--- a/VikingChess/VikingChess.vcxproj
+++ b/VikingChess/VikingChess.vcxproj
@@ -131,12 +131,14 @@
 	<ClCompile Include="utility.cpp" />
 	<ClCompile Include="board.cpp" />
 	<ClCompile Include="pieces.cpp" />
+	<ClCompile Include="history.cpp" />
   </ItemGroup>
    <ItemGroup>
 	<ClInclude Include="constants.h" />
 	<ClInclude Include="utility.h" />
 	<ClCompile Include="board.h" />
 	<ClCompile Include="pieces.h" />
+	<ClCompile Include="history.h" />
    </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
